--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
-  <%= render "shared/navbar" %>
+    <%= render "shared/navbar" %>
     <%= yield %>
+    <%= render "shared/footer"  %>
     <%= javascript_include_tag 'application' %>
     <%= cloudinary_js_config %>
   </body>
