--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="content">Connect with us</div>
 <div class="footer">
-  <div class="social">&#62220;</div>
-  <div class="social">&#62217;</div>
-  <div class="social">&#62232;</div>
+  <div class="social"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+  <div class="social"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+  <div class="social"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 </div>
