--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,14 @@
         <li><%= link_to "Accueil" %></li>
         <li><%= link_to "Categories" %></li>
       </ul>
+      <form id="mega-search" class="navbar-form navbar-right">
+        <div class="input-group">
+          <%= form_tag articles_path, :method => 'Get' do %>
+        <%= text_field_tag :search, params[:search] %>
+        <%= submit_tag "Search", class: "fa fa-search"%>
+        <% end %>
+        </div>
+      </form>
     </div>
   </div>
 </nav>
