--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="collapse navbar-collapse" id="MainMenu">
       <ul class="nav navbar-nav menu-list">
-        <li><%= link_to "Accueil" %></li>
+        <li><%= link_to "Accueil", root_path %></li>
         <li><%= link_to "Categories" %></li>
       </ul>
       <form id="mega-search" class="navbar-form navbar-right">
