--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="MainMenu">
       <ul class="nav navbar-nav menu-list">
         <li><%= link_to "Accueil", root_path %></li>
-        <li><%= link_to "Categories" %></li>
+        <li><%= link_to "Categories", categories_path %></li>
       </ul>
       <form id="mega-search" class="navbar-form navbar-right">
         <div class="input-group">
