--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootsy";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "vendor/index";
