--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,12 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
-@import "articles/*"
+@import "articles/*";
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #272822; color: #ddd;
+}
+
