--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,7 +12,9 @@
   </div>
 </div>
 
-<% if policy(@article).edit? %>
-  <td><%= link_to 'Edit', edit_article_path(@article) %></td>
-  <td><%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<% if user_signed_in? %>
+  <% if policy(@article).edit? %>
+    <td><%= link_to 'Edit', edit_article_path(@article) %></td>
+    <td><%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
 <% end %>
