--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,11 @@
       <ul class="nav navbar-nav menu-list">
         <li><%= link_to "Accueil", root_path %></li>
         <li><%= link_to "Categories", categories_path %></li>
-        <% if user_signed_in? %>
-        <li><%= link_to "Créer un article", new_article_path %></li>
+        <% if !user_signed_in? %>
+          <li><%= link_to "Se connecter", new_user_session_path %></li>
+        <% else %>
+          <li><%= link_to "Créer un article", new_article_path %></li>
+          <li><%= link_to "Se déconnecter", destroy_user_session_path, method: :delete %>
         <% end %>
       </ul>
       <form class="form-inline">
