--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -248,3 +248,37 @@ img {
     }
   }
 }
+
+
+.apple_pagination {
+  background: #CC0000;
+  text-align: center;
+  border-bottom: 1px solid white;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  cursor: default; }
+  .apple_pagination a, .apple_pagination span {
+    padding: 0.2em 0.3em; }
+  .apple_pagination .disabled {
+    color: white; }
+  .apple_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    background-color: white;
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    line-height: 1.5;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+  .apple_pagination a {
+    text-decoration: none;
+    color: white; }
+    .apple_pagination a:hover, .apple_pagination a:focus {
+      text-decoration: underline; }
+
+.page_info {
+  color: white;
+}
