--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -49,3 +49,10 @@
   </div>
 </div>
 <br>
+
+<div class="apple_pagination">
+    <div class="page_info">
+      <%= page_entries_info @articles %>
+    </div>
+    <%= will_paginate @articles, :container => false %>
+  </div>
