fix sql problrem

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <br>
 <div class="container">
   <div class="row">
-    <% @articles.reverse.each do |article| %>
+    <% @articles.each do |article| %>
       <% if article.id.odd? %>
         <div class="col-xs-12">
           <div class="blog-card">
