--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -1,255 +1,172 @@
-$red: #CC0000;
-$grey: #e9e9e9;
-
 img {
   width: 100%;
-  height: 200px;
+  height: 300px;
 }
 
-@mixin transition($dur, $prop: all) {
-  transition: $prop $dur ease;
-  -webkit-transition: $prop $dur ease;
-}
-
-@mixin bgImg($url) {
-  background: url($url) center no-repeat;
-  background-size: cover;
-}
-
-.blog-card {
-  @include transition(0.3s, height);
-
-  background: #fff;
-  border-radius: 3px;
-  box-shadow: 0 3px 7px -3px rgba(0, 0, 0, 0.3);
-  margin: 0 auto 1.6%;
-  overflow: hidden;
-  position: relative;
-  font-size: 14px;
-  line-height: 1.45em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  &:hover {
-    .details {
-      left: 0;
-    }
-
-    &.alt {
-      .details {
-        right: 0;
-      }
-    }
-  }
-
-  &.alt {
-    .details {
-      right: -100%;
-      left: inherit;
-    }
-  }
-
-  .photo {
-    height: 200px;
-    position: relative;
-  }
-
-  .details {
-    @include transition(0.3s);
-
-    background: rgba(0, 0, 0, 0.6);
-    box-sizing: border-box;
+#blog-section {margin-top:40px;margin-bottom:80px;}
+.content-title {padding:5px;background-color:#fff;}
+.content-title h3 a {color:#34495E;text-decoration:none; transition: 0.5s;}
+.content-title h3 a:hover {color:#F39C12; }
+.content-footer {background-color:#CC0000;padding:10px;position: relative;}
+.content-footer span a {
     color: #fff;
-    font-family: "Open Sans";
-    list-style: none;
-    margin: 0;
-    padding: 10px 15px;
-    height: 200px;
+    display: inline-block;
+    padding: 6px 5px;
+    text-decoration: none;
+    transition: 0.5s;
+}
 
-    /*POSITION*/
+aside {
+    margin-top: 30px;
+    -webkit-box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);
+    -moz-box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);
+    box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);}
+
+      aside .content-footer>img {
+        width: 33px;
+        height: 33px;
+        border-radius: 100%;
+        margin-right: 10px;
+        border: 2px solid #fff;
+      }
+
+.user-ditels {
+    width: 300px;
+    top: -100px;
+    height: 100px;
+    padding-bottom: 99px;
     position: absolute;
-    top: 0;
-    left: -100%;
-
-    > li {
-      padding: 3px 0;
-    }
-
-    li:before, .tags ul:before {
-      font-family: FontAwesome;
-      margin-right: 10px;
-      vertical-align: middle;
-    }
-
-    .author:before {
-      content: "\f007";
-    }
-
-    .date:before {
-      content: "\f133";
-    }
-
-    .tags {
-      ul {
-        &:before {
-          content: "\f02b";
-        }
-
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      li {
-        display: inline-block;
-        margin-right: 3px;
-      }
-    }
-
-    a {
-      color: inherit;
-      border-bottom: 1px dotted;
-
-      &:hover {
-        color: $red;
-      }
-    }
-  }
-
-  .description {
-    padding: 10px;
-    box-sizing: border-box;
-    position: relative;
-
-    h1 {
-      font-family: "Roboto";
-      line-height: 1em;
-      margin: 0 0 10px 0;
-    }
-
-    h2 {
-      color: $grey / 1.5;
-      font-family: "Open Sans";
-      line-height: 1.2em;
-      text-transform: uppercase;
-      font-size: 1em;
-      font-weight: 400;
-      margin: 1.2% 0;
-    }
-
-    p {
-      position: relative;
-      margin: 0;
-      padding-top: 20px;
-
-      &:after {
-        content: "";
-        background: $red;
-        height: 6px;
-        width: 40px;
-
-        /*POSITION*/
-        position: absolute;
-        top: 6px;
-        left: 0;
-      }
-    }
-
-    a {
-      color: $red;
-      margin-bottom: 10px;
-      float: right;
-
-      &:after {
-        @include transition(0.3s);
-
-        content: "\f061";
-        font-family: FontAwesome;
-        margin-left: -10px;
-        opacity: 0;
-        vertical-align: middle;
-      }
-
-      &:hover:after {
-        margin-left: 5px;
-        opacity: 1;
-      }
-    }
-  }
+    border: solid 2px #fff;
+    background-color: #34495E;
+    right: 25px;
+    display: none;
+    z-index: 1;
 }
 
-@media screen and (min-width: 600px) {
-
-
-  .blog-card {
-    height: 200px;
-    max-width: 600px;
-
-    &:hover {
-      .photo {
-        transform: rotate(5deg) scale(1.3);
-      }
-
-      &.alt .photo {
-        transform: rotate(-5deg) scale(1.3);
-      }
-    }
-
-    &.alt {
-      .details {
-        padding-left: 30px;
-      }
-
-      .description {
-        float: right;
-
-        &:before {
-          transform: skewX(5deg);
-          right: -15px;
-          left: inherit;
-        }
-      }
-
-      .photo {
-        float: right;
-      }
-    }
-
-    .photo {
-      @include transition(0.5s);
-
-      float: left;
-      height: 100%;
-      width: 40%;
-    }
-
-    .details {
-      width: 40%;
-    }
-
-    .description {
-      float: left;
-      width: 60%;
-      z-index: 0;
-
-      &:before {
-        transform: skewX(-5deg);
-        content: "";
-        background: #fff;
-        width: 100%;
-        z-index: -1;
-
-        /*POSITION*/
-        position: absolute;
-        left: -15px;
-        top: 0;
-        bottom: 0;
-      }
-    }
+@media (max-width:768px){
+    .user-ditels {
+    right: 5px;
   }
+}
+/*recent-post-col////////////////////*/
+.widget-sidebar {
+    background-color: #fff;
+    padding: 20px;
+    margin-top: 30px;
+}
+
+.title-widget-sidebar {
+    font-size: 14pt;
+    border-bottom: 2px solid #CC0000;
+    margin-bottom: 15px;
+    padding-bottom: 10px;
+    margin-top: 0px;
+}
+
+.title-widget-sidebar:after {
+    border-bottom: 2px solid #CC0000;
+    width: 150px;
+    display: block;
+    position: absolute;
+    content: '';
+    padding-bottom: 10px;
+}
+
+.recent-post{width: 100%;height: 80px;list-style-type: none;}
+.post-img img {
+    width: 100px;
+    height: 70px;
+    float: left;
+    margin-right: 15px;
+    border: 5px solid #CC0000;
+    transition: 0.5s;
+}
+
+.recent-post a {text-decoration: none;color:#34495E;transition: 0.5s;}
+.post-img, .recent-post a:hover{color: rgba(204, 0, 0, 0.5);}
+.post-img img:hover{border: 5px solid #F39C12;}
+
+/*===============ARCHIVES////////////////////////////*/
+
+
+
+button.accordion {
+    background-color: #CC0000;
+    color: #fff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #F39C12;color: #fff;
+}
+
+button.accordion:after {
+    content: '\002B';
+    color: #fff;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
 
 
+/*categories//////////////////////*/
+
+.categories-btn{
+    background-color: #CC0000;
+    margin-top:30px;
+    color: #fff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+
+}
+.categories-btn:after {
+    content: '\25BA';
+    color: #fff;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+.categories-btn:hover {
+    background-color: #F39C12;color: #fff;
+}
+
+.form-control{border-radius: 0px;}
+
+.btn-warning {
+    border-radius: 0px;
+    background-color: #CC0000;
+    margin-top: 15px;
+}
+.input-group-addon{border-radius: 0px;}
+
+
+
+/*============Pagination*/
 .apple_pagination {
   background: #CC0000;
   text-align: center;
@@ -282,3 +199,5 @@ img {
 .page_info {
   color: white;
 }
+
+
