--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,54 +1,158 @@
-<br>
-<div class="container">
-  <div class="row">
-    <% @articles.each do |article| %>
-      <% if article.id.odd? %>
-        <div class="col-xs-12">
-          <div class="blog-card">
-            <div class="photo"><%= cl_image_tag article.picture.path, height: 200, width: 382, crop: :fill %></div>
-            <ul class="details">
-              <li class="author"><a href="#">Fremin Florian</a></li>
-              <li class="date"><%= article.created_at %></li>
-              <li class="tags">
-                <ul>
-                  <li><a href="#"><%= article.category.name %></a></li>
-                </ul>
+<section id="blog-section" >
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="row">
+          <% @articles.each do |article| %>
+<%= link_to article_path(article) do %>
+          <div class="col-lg-6 col-md-6">
+            <aside>
+              <%= cl_image_tag article.picture.path %>
+              <div class="content-title">
+                <div class="text-center">
+                  <h3><%= link_to article.title[0..17], article_path(article) %></h3>
+                </div>
+              </div>
+              <div class="content-footer">
+                <img class="user-small-img" src="https://lh3.googleusercontent.com/-uwagl9sPHag/WM7WQa00ynI/AAAAAAAADtA/hio87ZnTpakcchDXNrKc_wlkHEcpH6vMwCJoC/w140-h148-p-rw/profile-pic.jpg">
+                <span style="font-size: 16px;color: #fff;">Fremin Florian</span>
+                <span class="pull-right">
+                  <a href="#" data-toggle="tooltip" data-placement="left" title="Comments"><i class="fa fa-comments" ></i> 30</a>
+                  <a href="#" data-toggle="tooltip" data-placement="right" title="Loved"><i class="fa fa-heart"></i> 20</a>
+                </span>
+              </div>
+            </aside>
+          </div>
+          <% end %>
+          <% end %>
+        </div>
+      </div>
+      <!--           // RECENT POST===========-->
+      <div class="col-lg-4">
+        <div class="widget-sidebar">
+          <h2 class="title-widget-sidebar">// RECENT POST</h2>
+          <div class="content-widget-sidebar">
+            <ul>
+              <% @articles.last(4).each do |article| %>
+              <li class="recent-post">
+                <%= link_to article_path(article) do %>
+                <div class="post-img">
+                  <%= cl_image_tag article.picture.path, class: "img-responsive" %>
+                </div>
+                <h5><%= article.title %></h5>
+                <p><small><i class="fa fa-calendar" data-original-title="" title=""></i> 30 Juni 2014</small></p>
+                <% end %>
               </li>
+              <hr>
+              <% end %>
             </ul>
-            <div class="description">
-              <h1><%= article.title %></h1>
-              <h2><%= article.preface %></h2>
-              <p class="summary"><%= article.description[0...175].html_safe%>...</p>
-              <%= link_to "Voir plus", article_path(article) %>
+          </div>
+        </div>
+        <div class="widget-sidebar">
+          <h2 class="title-widget-sidebar">// ARCHIVES</h2>
+          <div class="last-post">
+            <button class="accordion">21/4/2016</button>
+            <div class="panel">
+              <li class="recent-post">
+                <div class="post-img">
+                  <img src="https://lh3.googleusercontent.com/-13DR8P0-AN4/WM1ZIz1lRNI/AAAAAAAADeo/XMfJ7CM-pQg9qfRuCgSnphzqhaj3SQg6QCJoC/w424-h318-n-rw/thumbnail4.jpg" class="img-responsive">
+                </div>
+                <a href="#"><h5>Excepteur sint occaecat cupi non proident laborum.</h5></a>
+                <p><small><i class="fa fa-calendar" data-original-title="" title=""></i> 30 Juni 2014</small></p>
+              </li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="last-post">
+            <button class="accordion">5/7/2016</button>
+            <div class="panel">
+              <li class="recent-post">
+                <div class="post-img">
+                  <img src="https://lh3.googleusercontent.com/-QlnwuVgbxus/WM1ZI1FKQiI/AAAAAAAADeo/nGSd1ExnnfIfIBF27xs8-EdBdfglqFPZgCJoC/w424-h318-n-rw/thumbnail2.jpg" class="img-responsive">
+                </div>
+                <a href="#"><h5>Excepteur sint occaecat cupi non proident laborum.</h5></a>
+                <p><small><i class="fa fa-calendar" data-original-title="" title=""></i> 30 Juni 2014</small></p>
+              </li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="last-post">
+            <button class="accordion">15/9/2016</button>
+            <div class="panel">
+              <li class="recent-post">
+                <div class="post-img">
+                  <img src="https://lh3.googleusercontent.com/-wRHL_FOH1AU/WM1ZIxQZ3DI/AAAAAAAADeo/lwJr8xndbW4MHI-lOB7CQ-14FJB5f5SWACJoC/w424-h318-n-rw/thumbnail5.jpg" class="img-responsive">
+                </div>
+                <a href="#"><h5>Excepteur sint occaecat cupi non proident laborum.</h5></a>
+                <p><small><i class="fa fa-calendar" data-original-title="" title=""></i> 30 Juni 2014</small></p>
+              </li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="last-post">
+            <button class="accordion">2/3/2017</button>
+            <div class="panel">
+              <li class="recent-post">
+                <div class="post-img">
+                  <img src="https://lh3.googleusercontent.com/-QlnwuVgbxus/WM1ZI1FKQiI/AAAAAAAADeo/nGSd1ExnnfIfIBF27xs8-EdBdfglqFPZgCJoC/w424-h318-n-rw/thumbnail2.jpg" class="img-responsive">
+                </div>
+                <a href="#"><h5>Excepteur sint occaecat cupi non proident laborum.</h5></a>
+                <p><small><i class="fa fa-calendar" data-original-title="" title=""></i> 30 Juni 2014</small></p>
+              </li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
           </div>
         </div>
-      <% elsif  article.id.even? %>
-        <div class="col-xs-12">
-          <div class="blog-card alt">
-            <div class="photo"><%= cl_image_tag article.picture.path, height: 200, width: 382, crop: :fill %></div>
-            <ul class="details">
-              <li class="author"><a href="#">Fremin Florian</a></li>
-              <li class="date"><%= article.created_at %></li>
-              <li class="tags">
-                <ul>
-                  <li><a href="#"><%= article.category.name %></a></li>
-                </ul>
-              </li>
-            </ul>
-            <div class="description">
-              <h1><%= article.title %></h1>
-              <h2><%= article.preface %></h2>
-              <p class="summary"><%= article.description[0...175].html_safe%> ...</p>
-              <%= link_to "Voir plus", article_path(article) %>
-            </div>
-          </div>
+        <!--=====================
+        CATEGORIES
+        ======================-->
+        <div class="widget-sidebar">
+          <h2 class="title-widget-sidebar">// CATEGORIES</h2>
+          <button class="categories-btn">Audio</button>
+          <button class="categories-btn">Blog</button>
+          <button class="categories-btn">Gallery</button>
+          <button class="categories-btn">Images</button>
         </div>
-      <% end %>
-    <% end %>
+        <!--=====================
+        NEWSLATTER
+        ======================-->
+        <div class="widget-sidebar">
+          <h2 class="title-widget-sidebar">// NEWSLATTER</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut .</p>
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+            <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+          </div>
+          <button type="button" class="btn btn-warning">Warning</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<br>
+</section>
+<script src="js/jquery-3.1.1.js"></script>
+<script src="js/bootstrap.js"></script>
+<script>
+$(document).ready(function(){
+$('[data-toggle="tooltip"]').tooltip();
+});
+var acc = document.getElementsByClassName("accordion");
+var i;
+for (i = 0; i < acc.length; i++) {
+acc[i].onclick = function() {
+this.classList.toggle("active");
+var panel = this.nextElementSibling;
+if (panel.style.maxHeight){
+panel.style.maxHeight = null;
+} else {
+panel.style.maxHeight = panel.scrollHeight + "px";
+}
+}
+}
+</script>
+
 
 <div class="apple_pagination">
     <div class="page_info">
