--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -1,203 +1,165 @@
-img {
-  width: 100%;
-  height: 300px;
+.wrapper {
+  padding: 48px 48px 48px 48px;
+  background-color: #F4F4F4;
 }
 
-#blog-section {margin-top:40px;margin-bottom:80px;}
-.content-title {padding:5px;background-color:#fff;}
-.content-title h3 a {color:#34495E;text-decoration:none; transition: 0.5s;}
-.content-title h3 a:hover {color:#F39C12; }
-.content-footer {background-color:#CC0000;padding:10px;position: relative;}
-.content-footer span a {
-    color: #fff;
-    display: inline-block;
-    padding: 6px 5px;
-    text-decoration: none;
-    transition: 0.5s;
+h2 {
+  padding-top: 1em;
+  font-size: 2em;
+  font-weight: 900;
+  color: #3c3b3b;
+  font-family: "Raleway", Helvetica, sans-serif;
+  letter-spacing: 0.25em;
+  line-height: 1.65;
+  margin: 0 0 1em 0;
+  text-transform: uppercase;
+}
+p {
+  font-family: "Raleway", Helvetica, sans-serif;
+  font-size: 0.8em;
+  font-weight: 400;
+  letter-spacing: 0.25em;
+  line-height: 2.5;
+  text-transform: uppercase;
 }
 
-aside {
-    margin-top: 30px;
-    -webkit-box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);
-    -moz-box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);
-    box-shadow: 1px 4px 16px 3px rgba(199,197,199,1);}
-
-      aside .content-footer>img {
-        width: 33px;
-        height: 33px;
-        border-radius: 100%;
-        margin-right: 10px;
-        border: 2px solid #fff;
-      }
-
-.user-ditels {
-    width: 300px;
-    top: -100px;
-    height: 100px;
-    padding-bottom: 99px;
-    position: absolute;
-    border: solid 2px #fff;
-    background-color: #34495E;
-    right: 25px;
-    display: none;
-    z-index: 1;
+h3 {
+  font-family: "Raleway", Helvetica, sans-serif;
+  font-weight: 800;
+  letter-spacing: 0.25em;
+  line-height: 1.65;
+  margin: 0 0 1em 0;
+  text-transform: uppercase;
+  font-size: 0.8em;
 }
 
-@media (max-width:768px){
-    .user-ditels {
-    right: 5px;
+.side-bar {
+  padding-top: 2em;
+  .logo {
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
   }
 }
-/*recent-post-col////////////////////*/
-.widget-sidebar {
-    background-color: #fff;
-    padding: 20px;
-    margin-top: 30px;
+
+.section {
+  border-top: solid 1px rgba(160, 160, 160, 0.3);
+  margin: 3em 0 0 0;
+  padding: 3em 0 0 0;
 }
 
-.title-widget-sidebar {
-    font-size: 14pt;
-    border-bottom: 2px solid #CC0000;
-    margin-bottom: 15px;
-    padding-bottom: 10px;
-    margin-top: 0px;
+.section-2 {
+  border-top: solid 1px rgba(160, 160, 160, 0.3);
+  margin: 1.5em 0 0 0;
+  padding: 1.5em 0 0 0;
 }
 
-.title-widget-sidebar:after {
-    border-bottom: 2px solid #CC0000;
-    width: 150px;
-    display: block;
+.card-side {
+  width: 100%;
+  padding-bottom: 2.5em;
+  img {
+    height: 12em;
+    width: 100%;
+  }
+  .title {
+    position: relative;
+    background: #fff;
+    width: 100%;
+    padding: 1.25em 4.25em 0.1em 1.25em;
+    .time {
+      font-size: 0.6em;
+      margin: -0.625em 0 1.7em 0;
+    }
+    img {
+      border-radius: 50%;
+      height: 3em;
+      width: 3em;
+      position: absolute;
+      top: 1.3em;
+      right: 2.5em;
+    }
+  }
+}
+
+.posts {
+  padding-left: 6em;
+  padding-right: 2em;
+  .time {
+    margin-top: -0.9em;
+  }
+  img {
     position: absolute;
-    content: '';
-    padding-bottom: 10px;
+    top: 0em;
+    left: 2em;
+    height: 4em;
+    width: 4em;
+  }
 }
 
-.recent-post{width: 100%;height: 80px;list-style-type: none;}
-.post-img img {
-    width: 100px;
-    height: 70px;
-    float: left;
-    margin-right: 15px;
-    border: 5px solid #CC0000;
-    transition: 0.5s;
+.article {
+  border: solid 1px rgba(160, 160, 160, 0.3);
+  background-color: #fff;
+  margin-bottom: 3em;
+  .left-content {
+    border-right: solid 1px rgba(160, 160, 160, 0.3);
+    padding: 3.75em 3em 3.3em 3em;
+    p {
+      font-size: 0.7em;
+    }
+    h2 {
+      font-size: 1.7em;
+    }
+  }
+  .right-content {
+    padding: 5em 3em 3.3em 3em;
+    h2 {
+      color: #3c3b3b;
+      font-family: "Raleway", Helvetica, sans-serif;
+      font-size: 0.7em;
+      font-weight: 800;
+      letter-spacing: 0.25em;
+      margin-top: 0.5em;
+      text-transform: uppercase;
+      margin-bottom: 1.5em;
+    }
+    .name {
+      font-family: "Raleway", Helvetica, sans-serif;
+      font-size: 0.7em;
+      font-weight: 400;
+      letter-spacing: 0.25em;
+      line-height: 2.5;
+      text-transform: uppercase;
+    }
+    img {
+      border-radius: 50%;
+      height: 3em;
+      width: 3em;
+    }
+  }
+
+  .img-article {
+    padding: 3.75em 3em 3.3em 3em;
+    border-top: solid 1px rgba(160, 160, 160, 0.3);
+    img {
+      width: 100%;
+    }
+    p {
+      text-transform: initial;
+      text-align: justify;
+      margin-bottom: 3em;
+    }
+  }
 }
 
-.recent-post a {text-decoration: none;color:#34495E;transition: 0.5s;}
-.post-img, .recent-post a:hover{color: rgba(204, 0, 0, 0.5);}
-.post-img img:hover{border: 5px solid #F39C12;}
-
-/*===============ARCHIVES////////////////////////////*/
-
-
-
-button.accordion {
-    background-color: #CC0000;
-    color: #fff;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+.btn-primary {
+  background: transparent;
+  color: #3c3b3b;
+  font-family: "Raleway", Helvetica, sans-serif;
+  font-size: 0.6em;
+  font-weight: 800;
+  height: 4.8125em;
+  letter-spacing: 0.25em;
+  line-height: 4.8125em;
+  padding: 0 2.5em;
+  text-transform: uppercase;
 }
-
-button.accordion.active, button.accordion:hover {
-    background-color: #F39C12;color: #fff;
-}
-
-button.accordion:after {
-    content: '\002B';
-    color: #fff;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
-}
-
-button.accordion.active:after {
-    content: "\2212";
-}
-
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-}
-
-
-/*categories//////////////////////*/
-
-.categories-btn{
-    background-color: #CC0000;
-    margin-top:30px;
-    color: #fff;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-
-}
-.categories-btn:after {
-    content: '\25BA';
-    color: #fff;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
-}
-.categories-btn:hover {
-    background-color: #F39C12;color: #fff;
-}
-
-.form-control{border-radius: 0px;}
-
-.btn-warning {
-    border-radius: 0px;
-    background-color: #CC0000;
-    margin-top: 15px;
-}
-.input-group-addon{border-radius: 0px;}
-
-
-
-/*============Pagination*/
-.apple_pagination {
-  background: #CC0000;
-  text-align: center;
-  border-bottom: 1px solid white;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  cursor: default; }
-  .apple_pagination a, .apple_pagination span {
-    padding: 0.2em 0.3em; }
-  .apple_pagination .disabled {
-    color: white; }
-  .apple_pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    background-color: white;
-    display: inline-block;
-    width: 1.4em;
-    height: 1.4em;
-    line-height: 1.5;
-    -moz-border-radius: 1em;
-    -webkit-border-radius: 1em;
-    border-radius: 1em;
-    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
-  .apple_pagination a {
-    text-decoration: none;
-    color: white; }
-    .apple_pagination a:hover, .apple_pagination a:focus {
-      text-decoration: underline; }
-
-.page_info {
-  color: white;
-}
-
-
