--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -142,6 +142,7 @@ h3 {
     border-top: solid 1px rgba(160, 160, 160, 0.3);
     img {
       width: 100%;
+      height: 18em;
     }
     p {
       text-transform: initial;
