--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-4">
         <div class="row">
           <div class="col-md-12 side-bar">
-            <img class="logo" src="https://html5up.net/uploads/demos/future-imperfect/images/logo.jpg" alt="" />
+            <%= image_tag 'avatar.jpg', class: 'logo' %>
             <h2>Easy Gems
             </h2>
             <p>Installer facilement et rapidement les Gems pour vos projets Ruby on Rails</p>
