--- a/app/assets/stylesheets/articles/index.scss
+++ b/app/assets/stylesheets/articles/index.scss
@@ -60,6 +60,7 @@ h3 {
   img {
     height: 12em;
     width: 100%;
+    background-size: cover;
   }
   .title {
     position: relative;
@@ -143,6 +144,7 @@ h3 {
     img {
       width: 100%;
       height: 18em;
+      background-size: cover;
     }
     p {
       text-transform: initial;
