--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,3 +1,13 @@
+.first-content {
+  font-size: 2em;
+  font-family: "Raleway", Helvetica, sans-serif;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  background: #CC0000;
+  padding: 5em 0 5em 0em;
+}
 .navbar-default .navbar-nav > li > a {
   font-size: 0.7em;
   font-family: "Raleway", Helvetica, sans-serif;
@@ -11,7 +21,9 @@
 .navbar-default .navbar-nav > li:first-child > a {
   border-left: none;
 }
-
+.navbar {
+  margin-bottom: 0;
+}
 .navbar-brand {
   font-size: 0.7em;
   font-family: "Raleway", Helvetica, sans-serif;
@@ -85,5 +97,8 @@
     li:first-child > a {
     border-left: solid 1px rgba(160, 160, 160, 0.3);
     }
+  }
+  .first-content {
+    display: none;
   }
 }
