--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,6 @@
+<div class="first-content">
+  INSTALLER FACILEMENT ET RAPIDEMENT <br>LES GEMS POUR VOS PROJETS RUBY ON RAILS
+</div>
 <div class="wrapper">
   <div class="container-fluid">
     <div class="row">
